# ros2_foundation_pose

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: foundation_pose_config.yaml
launch/: foundation_pose.launch.py
ros2_foundation_pose/: detector.py  estimater.py  model_config.py  run_demo.py  segmentor.py
ros2_foundation_pose/bundlesdf/mycuda/common.egg-info/: SOURCES.txt
ros2_foundation_pose/learning/datasets/: h5_dataset.py  pose_dataset.py
ros2_foundation_pose/learning/models/: network_modules.py  refine_network.py  score_network.py
ros2_foundation_pose/learning/training/: predict_pose_refine.py  predict_score.py
scripts/: foundation_pose_node.py
